tests/compile-fail/integration__integration__image_sources__image_source_in_olde_ecl.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: unexpected image_source
  ┌─ <input>:7:30
  │
7 │         #pragma image_source "tests/integration/resources/th12-embedded-image-source.anm"
  │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


